Fixed spacing on create wallet

--- a/app/styles/etherwallet-custom.less
+++ b/app/styles/etherwallet-custom.less
@@ -531,6 +531,10 @@ label {
   box-shadow: -1px -1px 0 0 #BDC4CE;
 }
 
+.gen__1--inner h4 {
+  margin: 0rem auto 1rem !important;
+}
+
 .panel-heading {
   padding-left:1rem;
   box-shadow: -1px -1px 0 0 #BDC4CE;
